# gcode-thumb

./: Cargo.toml  Readme.md  gcode.thumbnailer
src/: main.rs
